2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add signal.c to the build.
	* signal.c: Added.  Contains helper functions to wrap signal(2).

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-statvfs.c: Fix Mac OS X build (statfs.f_frsize doesn't exist on OSX;
	  f_fsid isn't an integral type; fstatfs needs to use fpathconf).

2004-12-29  Jonathan Pryor  <jonpryor@vt.edu>

	* unistd.c: Null-terminate the string returned by readlink(2).  This works
	  around a marshaler "issue".

2004-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add GLIB_LIBS to the LIBS line, since we require linking
	  against glib-2.0 (to use g_assert()).

2004-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Added; wrap <fstab.h> functions: getfsent(3), getfsfile(3), 
	  getfsspec(3).
	* map.c: Add new conversion functions for SyslogOptions, SyslogFacility, 
	  SyslogLevel; see syslog(3) for details.
	* map.h: Add new conversion functions and values for SyslogOptions, 
	  SyslogFacility, SyslogLevel; see syslog(3) for details.
	* Makefile.am (MPH_SOURCE): add fstab.c, sys-statvfs.c, x-struct-str.c.
	* mph.h: Document location for Mac OS X man page documentation; add
	  MPH_INTERNAL macro for intra-library function calls (for functions that
	  shouldn't be exported from libMonoPosixHelper.so); declare
	  _mph_copy_structure_strings().
	* pwd.c: Use _mph_copy_structure_strings() to copy strings embedded within
	  struct passwd.
	* sys-statvfs.c: Added; wrap <sys/statvfs.h> functions statvfs(2),
	  fstatvfs(2), and (to complicate things) implement (f)statvfs(2) in terms
	  of (f)statfs(2) on Mac OS X (which lacks the -vfs calls).
	* x-struct-str.c: implements _mph_copy_structure_strings(), which is a
	  generalized interface to copy strings between structures (as is needed in
	  pwd.c and fstab.c).

Thu Dec 23 14:58:09 EST 2004 Paolo Molaro <lupus@ximian.com>

	* serial.c: remove mono calls from here: they break the build
	and they don't belong here.
